dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/tex.c)

dnl Variable overrides
PACKAGE=texpp
VERSION=0.1
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.

AC_PREFIX_DEFAULT(/usr/local)

AC_SUBST(install_flags)

dnl The output files
AC_OUTPUT(
  Makefile 
  src/Makefile 
  tests/Makefile 
)

